# clipscope

./: .editorconfig  .gitignore  README.md  README.zh.md  STYLEGUIDE.md  config.yaml  download_user_videos.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: models.py  router.py
app/api/endpoints/: downloader.py  parser.py  tracking.py
app/static/: dashboard.html
scripts/: __init__.py  cli.py  com.user.douyin-feed.plist  com.user.douyin-sync.plist
scripts/analyze/: analyze_commenter_value.py  analyze_fan_portrait.py  analyze_identity_mining.py  analyze_recommend_portrait.py  analyze_social_graph.py
scripts/collect/: collect_comments.py  feed_collector.py
scripts/download/: rename_user_dirs.py  sync_downloads.py
scripts/launchd/: com.user.douyin-sync.plist.template  install_sync_job.sh  uninstall_sync_job.sh
scripts/utils/: __init__.py  apply_cookies.py  auto_sync.sh  bootstrap_lib.py  check_upstream.py  data_utils.py  paths.py
tests/: conftest.py  test_check_upstream.py  test_data_utils.py
