[project]
name = "social-archive-douyin"
version = "0.1.0"
description = "Douyin/TikTok/Bilibili data collection & analysis toolkit"
requires-python = ">=3.11"

[project.scripts]
douyin = "scripts.cli:main"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]
# Upstream crawler engine dependencies (from lib/requirements.txt)
# Note: httpx pinned to <0.28 because upstream code uses the deprecated
# `proxies` parameter in httpx.Client() which was removed in 0.28+
crawler = [
    "aiofiles",
    "httpx<0.28",
    "pyyaml",
    "rich",
    "lz4",
    "pycryptodomex",
    "pydantic",
    "qrcode",
    "pypng",
    "pywebio",
    "pywebio-battery",
    "pyfiglet",
    "tenacity",
    "browser-cookie3",
    "gmssl",
]

[tool.ruff]
target-version = "py311"
line-length = 100
include = ["*.py", "*.pyi"]
extend-exclude = [
    "lib/",
    ".venv/",
    "data/",
    "__pycache__/",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "RUF",       # ruff-specific
]
ignore = [
    "E501",      # 行长度由 formatter 处理
    "D100",      # 模块级 docstring 可选
    "D104",      # __init__ docstring 可选
    "D107",      # __init__ 方法 docstring 可选
    "RUF001",    # 中文全角标点属于正常使用
    "RUF002",    # 同上
    "RUF003",    # 同上
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts", "app"]
omit = ["lib/*", ".venv/*", "tests/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.ruff.lint.per-file-ignores]
"app/api/endpoints/*.py" = ["D101", "D102", "D103"]
"app/main.py" = ["E402"]
"download_user_videos.py" = ["E402"]
"scripts/collect/*.py" = ["E402"]
"scripts/download/*.py" = ["E402"]
"scripts/utils/*.py" = ["D"]
"tests/*.py" = ["D100", "D101", "D102", "D103", "D104", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
